[project]
name = "caj2pdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "achieve_dream", email = "wulei7217@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"

dependencies = [
    "pypdf>=4.3.0",
    "imagesize>=1.4.1",
    "pymupdf>=1.24.7",
    "typer>=0.12.3",
    "pillow>=10.4.0",
    "loguru>=0.7.2",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
convert = "python old/caj2pdf.py convert target/caj/caj.caj"
show = "python old/caj2pdf.py show target/caj/hn"
main = "python examples/main.py target/caj/caj.caj"

[tool.hatch.build.targets.wheel]
packages = ["src/caj2pdf"]

